[gd_scene load_steps=10 format=2]

[ext_resource path="res://entities/Racket/Racket.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/Ball/Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Field/Field.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/Racket/AIInputComponent.gd" type="Script" id=4]
[ext_resource path="res://entities/Racket/PlayerInputComponent.gd" type="Script" id=5]
[ext_resource path="res://scenes/Game/Game.gd" type="Script" id=6]
[ext_resource path="res://menus/HUD/HUD.tscn" type="PackedScene" id=7]
[ext_resource path="res://menus/FinalScreen/FinalScreen.tscn" type="PackedScene" id=8]
[ext_resource path="res://menus/StartScreen/StartScreen.tscn" type="PackedScene" id=9]

[node name="Game" type="Node"]
script = ExtResource( 6 )

[node name="Field" parent="." instance=ExtResource( 3 )]

[node name="PlayerRacket" parent="." instance=ExtResource( 1 )]
position = Vector2( 50, 256 )

[node name="PlayerInputComponent" type="Node" parent="PlayerRacket"]
script = ExtResource( 5 )

[node name="AIRacket" parent="." instance=ExtResource( 1 )]
position = Vector2( 974, 256 )

[node name="AIInputComponent" type="Node" parent="AIRacket"]
script = ExtResource( 4 )
ball_path = NodePath("../../Ball")

[node name="Ball" parent="." instance=ExtResource( 2 )]
position = Vector2( 512, 256 )

[node name="StartTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="HUD" parent="." instance=ExtResource( 7 )]

[node name="CountdownContainer" parent="HUD" index="0"]
visible = false

[node name="FinalScreen" parent="." instance=ExtResource( 8 )]
visible = false

[node name="StartScreen" parent="." instance=ExtResource( 9 )]
[connection signal="goal_left" from="Field" to="." method="_on_Field_goal_left"]
[connection signal="goal_right" from="Field" to="." method="_on_Field_goal_right"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="exit" from="FinalScreen" to="." method="_on_FinalScreen_exit"]
[connection signal="new_round" from="FinalScreen" to="." method="_on_FinalScreen_new_round"]
[connection signal="exit" from="StartScreen" to="." method="_on_StartScreen_exit"]
[connection signal="new_round" from="StartScreen" to="." method="_on_StartScreen_new_round"]

[editable path="HUD"]
